--- a/02HTML/TABL.html
+++ b/02HTML/TABL.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-    <table width="500" border="1">
+    <table align="center" width="500" border="1">
         <caption><em>Прогноз погоды</em></caption>
         <tr>
             <th>Город</th>
