--- a/03HTML/pyth03.html
+++ b/03HTML/pyth03.html
@@ -37,9 +37,12 @@
 свои модули, использовать те, которые поставляются с Python или которые написали
 другие. В самом Python есть сотни модулей, которые облегчают написание программ.
 Список модулей, поставляемых с Python, находится по адресу:
-<ins>http://docs.python.org/modindex.html</ins>. Некоторые модули предназначены для определённых
+<a href="//docs.python.org/modindex.html">//docs.python.org/modindex.html</a>.
+ Некоторые модули предназначены для определённых
 операционных систем, но большинство из них кроссплатформенные и работают
-одинаково на <ins>Linux</ins>, <ins>Mac</ins> и <ins>Microsoft Windows</ins>. Для использования внешнего модуля
+одинаково на <a href="https://ru.wikipedia.org/wiki/Linux">Linux</a>, 
+<a href="https://ru.wikipedia.org/wiki/MacOS">Mac</a> и 
+<a href="https://ru.wikipedia.org/wiki/Windows">Microsoft Windows</a>. Для использования внешнего модуля
 необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
 называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
 используем этот модуль в нашем первом примере.</p>
