--- a/03HTML/pyth03.html
+++ b/03HTML/pyth03.html
@@ -37,7 +37,7 @@
 свои модули, использовать те, которые поставляются с Python или которые написали
 другие. В самом Python есть сотни модулей, которые облегчают написание программ.
 Список модулей, поставляемых с Python, находится по адресу:
-<a href="//docs.python.org/modindex.html">//docs.python.org/modindex.html</a>.
+<a href="http://docs.python.org/modindex.html"><em>http://docs.python.org/modindex.html</em></a>.
  Некоторые модули предназначены для определённых
 операционных систем, но большинство из них кроссплатформенные и работают
 одинаково на <a href="https://ru.wikipedia.org/wiki/Linux">Linux</a>, 
