--- a/03HTML/pyth03.html
+++ b/03HTML/pyth03.html
@@ -25,26 +25,26 @@
 
     <hr>
 
-    <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и
-присвоение, операторы<strong> if</strong> и<strong> while</strong>. Я обещал, что в этой части мы изучим модули и
+    <p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и<br>
+присвоение, операторы<strong> if</strong> и<strong> while</strong>. Я обещал, что в этой части мы изучим модули и<br>
 функции. Давайте начнём.</p>
 
 <h2 id="mod">Модули</h2>
 
 <p><a href="#sod">К содержанию</a></p>
 
-<p>Модули предлагают способ расширить программирование на Python. Вы можете создать
-свои модули, использовать те, которые поставляются с Python или которые написали
-другие. В самом Python есть сотни модулей, которые облегчают написание программ.
-Список модулей, поставляемых с Python, находится по адресу:
+<p>Модули предлагают способ расширить программирование на Python. Вы можете создать свои<br>
+ модули, использовать те, которые поставляются с Python или которые написали другие. В самом<br> 
+ Python есть сотни модулей, которые облегчают написание программ. Список модулей, поставляемых<br>
+ с Python, находится по адресу:
 <a href="http://docs.python.org/modindex.html"><em>http://docs.python.org/modindex.html</em></a>.
- Некоторые модули предназначены для определённых
-операционных систем, но большинство из них кроссплатформенные и работают
+ Некоторые модули <br>предназначены для определённых
+операционных систем, но большинство из них <br>кроссплатформенные и работают
 одинаково на <a href="https://ru.wikipedia.org/wiki/Linux">Linux</a>, 
 <a href="https://ru.wikipedia.org/wiki/MacOS">Mac</a> и 
-<a href="https://ru.wikipedia.org/wiki/Windows">Microsoft Windows</a>. Для использования внешнего модуля
-необходимо импортировать его в программу. Один из модулей, поставляемых с Python,
-называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы
+<a href="https://ru.wikipedia.org/wiki/Windows">Microsoft Windows</a>. Для использования <br>внешнего модуля
+необходимо импортировать его в программу. Один из модулей, поставляемых с <br>Python,
+называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы<br>
 используем этот модуль в нашем первом примере.</p>
 
 <pre>#=======================================
@@ -56,8 +56,8 @@ import random
 for cntr in range(1,15):
  print random.randint(1,10)</pre>
 
-<p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых
-мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать
+<p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых<br>
+мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать<br>
 модуль «random». Мы должны явно указать Python на это.</p>
 
 <hr>
@@ -66,14 +66,14 @@ for cntr in range(1,15):
 
 <p><a href="#sod">К содержанию</a></p>
 
-<p>Когда мы импортировали модуль random, мы использовали функцию<strong> randint()</strong>. Функция
-— это блок кода, который создан для того, чтобы вызывать его в программе, обычно,
-более одного раза. Это упрощает работу над программой и предотвращает набор одного и
-того же кода снова и снова. Грубо говоря, если вам нужно написать некоторый код
-больше, чем 1-2 раза, стоит сделать его функцией. Хотя следующие два примера очень
-простые, это хорошие примеры функций. Теперь мы хотим, скажем, взять два числа,
-сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и
-результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов
+<p>Когда мы импортировали модуль random, мы использовали функцию<strong> randint()</strong>. Функция<br>
+— это блок кода, который создан для того, чтобы вызывать его в программе, обычно,<br>
+более одного раза. Это упрощает работу над программой и предотвращает набор одного и<br>
+того же кода снова и снова. Грубо говоря, если вам нужно написать некоторый код<br>
+больше, чем 1-2 раза, стоит сделать его функцией. Хотя следующие два примера очень<br>
+простые, это хорошие примеры функций. Теперь мы хотим, скажем, взять два числа,<br>
+сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и<br>
+результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов<br>
 чисел. Тогда наш пример будет выглядеть как код ниже.</p>
 
 <pre>#silly example
@@ -90,13 +90,13 @@ print '%d * %d = %d ' % (10,5,10*5)
 print '%d - %d = %d ' % (10,5,10-5)
 print '\n'</pre>
 
-<p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при
+<p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при<br>
 написании, так и при внесении изменений. Вместо этого мы создадим функцию, которую
-назовём <strong><em>«DoTwo»</em></strong>. Она будет каждый раз брать два числа, проводить математические
-операции и выводить результат. Начнём с ключевого слова<strong><em> «def»</em></strong>, которое сигнализирует
-о том, что мы собираемся определить функцию. После слова <strong><em>«def»</em></strong> добавим название
-функции и список параметров, если таковые имеются, в круглых скобках. Эту строку
-необходимо завершить двоеточием. Код функции набирается с отступом. Наш
+назовём <strong><em>«DoTwo»</em></strong>. Она будет каждый раз брать два числа, проводить математические<br>
+операции и выводить результат. Начнём с ключевого слова<strong><em> «def»</em></strong>, которое сигнализирует<br>
+о том, что мы собираемся определить функцию. После слова <strong><em>«def»</em></strong> добавим название<br>
+функции и список параметров, если таковые имеются, в круглых скобках. Эту строку<br>
+необходимо завершить двоеточием. Код функции набирается с отступом. Наш<br>
 улучшенный простой пример (<ins>№2</ins>) показан ниже.</p>
 
 <pre>#silly example 2...still silly, but better
@@ -109,8 +109,9 @@ DoTwo(1,2)
 DoTwo(1,4)
 DoTwo(10,5)</pre>
 
-<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо поменять в функции, мы сможем сделать это, не создавая проблем для нашей
-программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
+<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет чтолибо <br>
+поменять в функции, мы сможем сделать это, не создавая проблем для нашей программы. Чтобы <br>
+вызвать функцию, нужно написать её имя и параметры.</p>
 
 
 
