--- a/03HTML/site.by/index.html
+++ b/03HTML/site.by/index.html
@@ -31,7 +31,7 @@
         <li><a href="catalog.html">Каталог</a></li>
         <ul type="circle">
             <li><a href="catalog/a_w.html">Осень-Зима</a></li>
-            <li<a href="catalog/s_s.html">>Весна-Лето</a></li>
+            <li><a href="catalog/s_s.html">Весна-Лето</a></li>
         </ul>
         <li><a href="promo.html">Акции</a></li>
         <ul type="circle">
@@ -60,7 +60,7 @@
         
             <table>
                 <tr><td><a href="catalog/a_w.html">Осень-Зима</a></td></tr>
-                <tr><td><li<a href="catalog/s_s.html">Весна-Лето</a></td></tr>
+                <tr><td><a href="catalog/s_s.html">Весна-Лето</a></td></tr>
             </table></td>
         </tr>
         <tr>
