--- a/06CSS/add/letter.html
+++ b/06CSS/add/letter.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Letter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/letter.css">
 </head>
 <body>
