--- a/FrameWork/foundation.html
+++ b/FrameWork/foundation.html
@@ -24,9 +24,9 @@
         <div class="large-4 medium-4 cell">
           <div class="callout">
             <ul>
-              <li><a href="media01.html">Программа на Python — часть 1</a></li>
-              <li><a href="media02.html">Программа на Python — часть 2</a></li>
-              <li><a href="media03.html">Программа на Python — часть 3</a></li>
+              <li><a href="#">Программа на Python — часть 1</a></li>
+              <li><a href="#">Программа на Python — часть 2</a></li>
+              <li><a href="#">Программа на Python — часть 3</a></li>
              </ul>
              <h2 id="sod">Содержание</h2>
           </div>
